--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -2,4 +2,13 @@
     font-weight: 700;
     font-size: 16px;
     color: $text-color;
+    &_fs14 {
+        font-size: 14px;
+    }
+}
+
+.title {
+    font-weight: 700;
+    font-size: 36px;
+    color: #000;
 }
