--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'blocks/title';
 @import 'blocks/buttons.scss';
 @import 'blocks/sidepanel';
+@import 'blocks/introduce';
 
 * {
     font-family: 'Poppins', sans-serif;
