--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,9 +4,10 @@
 @import 'base/mixins';
 @import 'blocks/promo';
 @import 'blocks/title';
-@import 'blocks/buttons.scss';
+@import 'blocks/buttons';
 @import 'blocks/sidepanel';
 @import 'blocks/introduce';
+@import 'blocks/menu';
 
 * {
     font-family: 'Poppins', sans-serif;
