--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -5,6 +5,10 @@
     &_fs14 {
         font-size: 14px;
     }
+    &_fs20 {
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
 
 .title {
