--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'blocks/sidepanel';
 @import 'blocks/introduce';
 @import 'blocks/menu';
+@import 'blocks/resume';
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -24,4 +25,9 @@
     width: 60px;
     height: 3px;
     background-color: $main-color;
+    margin: 0 auto;
+    margin-top: 25px;
+    &_intro {
+        margin: 0;
+    }
 }
