--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/introduce';
 @import 'blocks/menu';
 @import 'blocks/resume';
+@import 'blocks/skills';
 
 * {
     font-family: 'Poppins', sans-serif;
