--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -1,18 +1,6 @@
 .skills {
     margin-top: 120px;
-    padding: 0 10px;
-    &__subtitle {
-        position: relative;
-        text-align: center;
-        @include before_circle;
-        &:before {
-            left: 50%;
-            transform: translateX(-50%);
-        }
-    }
-    &__title {
-        text-align: center;
-    }
+    padding: 0 10px 120px 10px;
     &__wrapper {
         margin-top: 85px;
         display: grid;
