--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,8 @@
 @import 'blocks/menu';
 @import 'blocks/resume';
 @import 'blocks/skills';
+@import 'blocks/works';
+@import 'blocks/location';
 
 * {
     font-family: 'Poppins', sans-serif;
