--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/skills';
 @import 'blocks/works';
 @import 'blocks/location';
+@import 'blocks/contacts';
 
 * {
     font-family: 'Poppins', sans-serif;
