--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -58,7 +58,18 @@
             font-size: 12px;
             color: $text-color;
         }
-    }    
+    }   
+    &__triggers {
+        grid-column: 1 / 3;
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        justify-content: space-between;
+        padding-right: 20px;
+        input {
+            margin-right: 10px;
+        }
+    } 
     &__textarea {
         position: relative;
         grid-column: 1 / 3;
