--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 100vh;
     position: relative;
-    background: url('../img/main_bg.jpg') center (50%/cover) no-repeat;
+    background: url('../img/main_bg.jpg') no-repeat 50% / cover;
     padding-top: 206px;
     &__title {
         font-weight: 700;
