--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/works';
 @import 'blocks/location';
 @import 'blocks/contacts';
+@import 'blocks/media';
 
 * {
     font-family: 'Poppins', sans-serif;
