--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -23,6 +23,12 @@
             padding-left: 55px;
         }
     }
+    .resume {
+        &__wrapper {
+            column-gap: 70px;
+            padding: 0 20px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -55,6 +61,13 @@
             margin-top: 10px;
         }
     }
+    .resume {
+        &__wrapper {
+            padding: 0;
+            grid-template-columns: repeat(2, 340px);
+            column-gap: 40px;
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -80,6 +93,12 @@
             &:nth-child(3) {
                 margin-top: 30px;
             }
+        }
+    }
+    .resume {
+        &__wrapper {
+            grid-template: repeat(2, auto) / 1fr;
+            row-gap: 40px;
         }
     }
 }
