--- a/src/sass/blocks/_location.scss
+++ b/src/sass/blocks/_location.scss
@@ -1,9 +1,10 @@
 .location {
-    padding: 120px;
+    padding: 120px 0;
     iframe {
         width: 100%;
         height: 600px;
         border: 0;
         border-radius: 1%;
+        margin-top: 40px;
     }
 }
