--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -29,6 +29,13 @@
             padding: 0 20px;
         }
     }
+    .skills {
+        &__wrapper {
+            padding: 0 55px;
+            grid-template: repeat(2, 270px) / repeat(3, 270px);
+            gap: 20px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -68,6 +75,30 @@
             column-gap: 40px;
         }
     }
+    .skills {
+        &__wrapper {
+            padding: 0 65px;
+            grid-template: repeat(3, 270px) / repeat(2, 270px);
+            gap: 50px;
+        }
+        &__scales {
+            margin-top: 60px;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    .works {
+        .vertical {
+            grid-column: 3;
+            grid-row: 1 / 2;
+        }
+        .horizontal {
+            grid-row: 2;
+            grid-column: 2 / 3;
+        }
+        &__wrapper {
+            grid-template: repeat(2, 280px) / repeat(3, 1fr);
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -99,6 +130,32 @@
         &__wrapper {
             grid-template: repeat(2, auto) / 1fr;
             row-gap: 40px;
+        }
+    }
+    .skills {
+        &__wrapper {
+            padding: 0;
+            grid-template: repeat(5, 270px) / repeat(1, 270px);
+            gap: 20px;
+            justify-content: center;
+        }
+        &__scales {
+            margin-top: 60px;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    .works {
+        &__wrapper {
+            grid-template: repeat(3, 280px) / repeat(2, 1fr);
+        }
+        .vertical {
+            grid-column: 2;
+            grid-row: 1 / 2;
+        }
+    }
+    .location {
+        iframe {
+            height: 440px;
         }
     }
 }
@@ -156,6 +213,67 @@
             &:nth-child(3) {
                 margin-top: 0px;
             }
+        }
+    }
+    .resume {
+        .title {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        &__wrapper {
+            margin-top: 40px;
+        }
+    }
+    .skills {
+        &__scales {
+            grid-template-columns: 1fr;
+        }
+        .title {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        &__wrapper {
+            margin-top: 20px;
+        }
+        .line {
+            margin-top: 15px;
+        }
+    }
+    .works {
+        &__wrapper {
+            grid-template: repeat(6, 280px) / 280px;
+            justify-content: center;
+            row-gap: 20px;
+            margin-top: 40px;
+        }
+        .title {
+            font-size: 24px;
+            line-height: 36px;
+            margin-top: 30px;
+        }
+        .line {
+            margin-top: 15px;
+        }
+        .vertical {
+            grid-column: 1;
+            grid-row: 4;
+        }
+        .horizontal {
+            grid-row: 6;
+            grid-column: 1;
+        }
+    }
+    .location {
+        iframe {
+            height: 340px;
+        }
+        .title {
+            font-size: 24px;
+            line-height: 36px;
+            margin-top: 20px;
+        }
+        .line {
+            margin-top: 15px;
         }
     }
 }
