--- a/src/sass/blocks/_works.scss
+++ b/src/sass/blocks/_works.scss
@@ -15,6 +15,8 @@
     &__item {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         transition: all 0.6s;
         &:hover {
