--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -48,6 +48,11 @@
             grid-template: 45px 190px 45px / repeat(2, 1fr);
         }
     }
+    .works {
+        &__item {
+            grid-template-columns: 400px 500px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -98,19 +103,7 @@
             grid-template-columns: repeat(2, 1fr);
         }
     }
-    .works {
-        .vertical {
-            grid-column: 3;
-            grid-row: 1 / 2;
-        }
-        .horizontal {
-            grid-row: 2;
-            grid-column: 2 / 3;
-        }
-        &__wrapper {
-            grid-template: repeat(2, 280px) / repeat(3, 1fr);
-        }
-    }
+    
     .contacts {
         padding-bottom: 40px;
         &__wrapper {
@@ -126,11 +119,48 @@
             grid-template: 45px 190px 45px / repeat(2, 1fr);
         }
     }
+    .works {
+        padding-bottom: 60px;
+        &__tabs {
+            width: 100%;
+        }
+        &__items {
+            width: 100%;
+        }
+        &__item {
+            grid-template-columns: 700px;
+            grid-template-rows: 400px 150px 1fr;
+            padding: 0 12px;
+            margin: 0 auto;
+            &-photo {
+                grid-column-start: 1;
+                grid-row-start: 1;
+                margin: 0 auto;
+            }
+            &-info {
+                grid-column-start: 1;
+                grid-row-start: 2;
+            }
+            &-descr {
+                font-size: 20px;
+                padding: 0;
+                text-align: center;
+                grid-column-start: 1;
+                grid-row: 3;
+            }
+        }
+    }
 }
 
 @media (max-width: 768px) {
     .container {
         max-width: 540px;
+    }
+    .promo {
+        padding-top: 100px;
+        &__technology {
+            width: 500px;
+        }
     }
     .introduce {
         padding: 40px 0;
@@ -173,15 +203,6 @@
             grid-template-columns: repeat(2, 1fr);
         }
     }
-    .works {
-        &__wrapper {
-            grid-template: repeat(3, 280px) / repeat(2, 1fr);
-        }
-        .vertical {
-            grid-column: 2;
-            grid-row: 1 / 2;
-        }
-    }
     .location {
         padding: 40px 0;
         iframe {
@@ -209,6 +230,37 @@
             grid-row: 1;
         }
     }
+    .works {
+        padding-bottom: 60px;
+        &__tabs {
+            width: 100%;
+        }
+        &__items {
+            width: 100%;
+        }
+        &__item {
+            grid-template-columns: 500px;
+            grid-template-rows: 400px 150px 1fr;
+            padding: 0 20px;
+            margin: 0 auto;
+            &-photo {
+                grid-column-start: 1;
+                grid-row-start: 1;
+                margin: 0 auto;
+            }
+            &-info {
+                grid-column-start: 1;
+                grid-row-start: 2;
+            }
+            &-descr {
+                font-size: 20px;
+                padding: 0;
+                text-align: center;
+                grid-column-start: 1;
+                grid-row: 3;
+            }
+        }
+    }
 }
 
 @media (max-width: 576px) {
@@ -217,13 +269,15 @@
         padding: 0 10px;
     }
     .promo {
-        background: url('../img/main_bg.jpg') no-repeat 57% / cover;
         &__title {
             font-size: 26px;
             line-height: 39px;
         }
         &__btns {
             margin-top: 30px;
+        }
+        &__technology {
+            width: 300px;
         }
     }
     .hamburger {
@@ -290,30 +344,6 @@
             margin-top: 15px;
         }
     }
-    .works {
-        &__wrapper {
-            grid-template: repeat(6, 280px) / 280px;
-            justify-content: center;
-            row-gap: 20px;
-            margin-top: 40px;
-        }
-        .title {
-            font-size: 24px;
-            line-height: 36px;
-            margin-top: 30px;
-        }
-        .line {
-            margin-top: 15px;
-        }
-        .vertical {
-            grid-column: 1;
-            grid-row: 4;
-        }
-        .horizontal {
-            grid-row: 6;
-            grid-column: 1;
-        }
-    }
     .location {
         iframe {
             height: 340px;
@@ -361,6 +391,43 @@
         }
         &__email {
             grid-row: 2 / 3;
+        }
+    }
+    .works {
+        padding-bottom: 60px;
+        &__tabs {
+            width: 100%;
+            flex-wrap: wrap;
+        }
+        &__tab {
+            margin-bottom: 15px;
+        }
+        &__items {
+            width: 100%;
+        }
+        &__item {
+            grid-template-columns: 300px;
+            grid-template-rows: 300px 150px 1fr;
+            padding: 0;
+            margin: 0 auto;
+            &-photo {
+                grid-column-start: 1;
+                grid-row-start: 1;
+                margin: 0 auto;
+                width: 280px;
+                height: 280px;
+            }
+            &-info {
+                grid-column-start: 1;
+                grid-row-start: 2;
+            }
+            &-descr {
+                font-size: 20px;
+                padding: 0;
+                text-align: center;
+                grid-column-start: 1;
+                grid-row: 3;
+            }
         }
     }
 }
