--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -406,7 +406,7 @@
             width: 100%;
         }
         &__item {
-            grid-template-columns: 300px;
+            grid-template-columns: 100%;
             grid-template-rows: 300px 150px 1fr;
             padding: 0;
             margin: 0 auto;
