--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -40,6 +40,7 @@
     &__mail {
         font-size: 20px;
         margin-top: 30px;
+        font-weight: 700;
     }
     &__footer {
         margin-top: 30px;
