--- a/src/scss/blocks/_works.scss
+++ b/src/scss/blocks/_works.scss
@@ -18,6 +18,7 @@
         align-items: center;
         cursor: pointer;
         transition: 0.6s all;
+        font-weight: 700;
         &-active {
             background-color: $main-color;
             color:#fff;
@@ -63,6 +64,7 @@
         }
         &-title {
             font-size: 18px;
+            font-weight: 700;
         }
         &-link {
             margin: 0 auto;
@@ -78,6 +80,7 @@
             transition: 0.6s all;
             color:#fff;
             background-color: $main-color;
+            font-weight: 700;
             &:hover {
                 text-decoration: none;
                 color: $text-color;
