--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,13 +18,16 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .container {
     width: 1140px;
     margin: 0 auto;
 }
-
+span {
+    font-weight: 700;
+}
 .line {
     width: 60px;
     height: 3px;
